--- a/portfolio/themes/hugo-developer-portfolio/data/portfolio.yml
+++ b/portfolio/themes/hugo-developer-portfolio/data/portfolio.yml
@@ -1,3 +1,7 @@
 filter:
-  - label: Web Dev
-    value: web-dev
+    - 
+      label: Web Dev
+      value: web-dev
+    - 
+      label: mobile-apps
+      value: mobile-apps
